# rust2

./: Cargo.toml  build.rs
src/: main.rs  main_OLD.rs
src/protos/: schema.proto
