[package]
name = "rust-protobuf-server"
version = "1.0.0"
authors = ["Robert Soric <robert.soric@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3"
flate2 = "1.0.24"
dashmap = "5.3.4"
lazy_static = "1.4.0"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1"}
async-compression = "0.3.14"
regex = "1.6.0"


[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"

[profile.release]
opt-level = 3

[package.metadata.cross.target.x86_64-unknown-linux-musl]
pre-build = ["apt-get update && apt-get install && apt install -y protobuf-compiler"]